Thu Apr  8 09:36:21 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: Avoid hang on variant type if conversion enabled

Mon Apr  5 14:45:37 EDT 2010	JK Lowden <jklowden@freetds.org>
	* include/tds.h src/tds/token.c log table metadata succintly
	* src/dblib/unittests/t0004.c test dbgetchar()

Mon Apr  5 14:44:11 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqldb.c Support TEXT datatype with any field terminator

Sat Apr  3 06:57:18 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/apps/bsqldb.c Support TEXT datatype

Mon Mar 22 15:41:47 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix descrec test

Wed Mar  3 09:08:14 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/write.c: compute length supporting all character sets

Tue Mar  2 16:40:46 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/common.h:
	* src/odbc/unittests/descrec.c:
	- add a test for SQLGetDescRec/SQLSetDescRec and fix a small issue
	  in SQLGetDescRec

Tue Mar  2 16:06:34 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/error.c src/odbc/unittests/getdata.c:
	* src/odbc/unittests/paramcore.c src/odbc/unittests/print.c:
	* src/odbc/unittests/rowset.c src/odbc/unittests/transaction2.c:
	- add ReadError and reuse it

Tue Mar  2 09:32:02 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c:
	- remove last exit calls (original patch from David Dick)

Mon Mar  1 15:52:14 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/freeclose.c: fix FreeTDS detection

Mon Mar  1 15:50:06 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/prepclose.c src/odbc/unittests/timeout3.c:
	* src/odbc/unittests/timeout4.c:
	- update for future implementations
