@@ -1,3 +1,7 @@
+Thu Apr  8 10:17:24 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tds.h src/apps/tsql.c src/tds/token.c:
+	- fix tsql and variant type
+
 Thu Apr  8 09:36:21 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/token.c: Avoid hang on variant type if conversion enabled
 
@@ -2378,4 +2382,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3004 2010/04/08 07:36:49 freddy77 Exp $
+$Id: ChangeLog,v 1.3005 2010/04/08 08:19:16 freddy77 Exp $
